--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--1.1.3-->
 <!doctype html>
 <html lang="pt-BR">
 <head>
@@ -16,6 +17,27 @@
   <link rel="apple-touch-icon" href="img/image.png">
 </head>
 <body>
+
+
+  <header class="hero-bg">
+    <div class="hero-content">
+      <div class="hero-title">Produtivus</div>
+      <div class="hero-subtitle">Estude melhor, organize suas tarefas e seus cadernos</div>
+      <div class="hero-desc">
+        Uma plataforma leve para estudantes e equipes organizarem projetos, tarefas e anotações em um só lugar.
+      </div>
+      <div class="hero-icons">
+        <div class="hero-icon"><span class="material-symbols-outlined">check_circle</span></div>
+        <div class="hero-icon"><span class="material-symbols-outlined">calendar_month</span></div>
+        <div class="hero-icon"><span class="material-symbols-outlined">list_alt</span></div>
+      </div>
+    </div>
+    <div class="hero-balloons">
+      <div class="hero-balloon nota">4,8/5 Nota</div>
+      <div class="hero-balloon foco">Foco Produtividade</div>
+    </div>
+  </header>
+
   <div id="app">
     <div id="header-container"></div>
     <main id="main-content"></main>
